Add overflow hidden to body and animate nav items

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <header>
     <h1>Trianoni Békeszerződés</h1>
   </header>
+  <article>
+    <h2>Lorem ipsum dolor</h2>
+  </article>
 </main>
   <footer>
     <div>
